--- a/index.html
+++ b/index.html
@@ -5,3 +5,16 @@
     <link rel = "stylesheet" href = "stylesheet.css"> />
     <script type = "text/javascript" src = "jquery-3.1.0.min.js"></script>
     <script type = "text/javascript" src = "app.js"></script>
+  </head>
+
+  <body>
+    <div class = "images">
+      <div id = "apple"></div>
+      <div id = "orange"></div>
+      <div id = "banana"></div>
+      <div id = "grape"></div>
+
+
+  </body>
+
+</html>
