--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
       <div id = "orange"></div>
       <div id = "banana"></div>
       <div id = "grape"></div>
+    </div>
+
+    <div class = "prices">
+      <div id = "applePrice"></div>
+      <div id = "orangePrice"></div>
+      <div id = "bananaPrice"></div>
+      <div id = "grapePrice"></div>
+    <div>  
 
 
   </body>
