--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<hmtl>
+<html>
   <head>
-    <title>Fruit for sale!</title>
-    <link rel = "stylesheet" href = "stylesheet.css"> />
-    <script type = "text/javascript" src = "jquery-3.1.0.min.js"></script>
-    <script type = "text/javascript" src = "app.js"></script>
+      <title>Color picker</title>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+      <script type="text/javascript" src="app.js"></script>
+      <link rel="stylesheet" href="stylesheet.css" />
   </head>
-
   <body>
-    <div class = "images">
-      <div id = "apple"></div>
-      <div id = "orange"></div>
-      <div id = "banana"></div>
-      <div id = "grape"></div>
-
-
+   <div id="container">
+      <div id="apple"></div>
+      <div id="orange"></div>
+      <div id="banana"></div>
+      <div id="grape"></div>
+    </div>
   </body>
-
 </html>
+
