--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
+   <h1 id="totalCash">Total: $<span id="cashOutput">20.00</span></h1>
    <div id="container">
       <div id="apple"></div>
       <div id="orange"></div>
