--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
    <h1 id="totalCash">Total: $<span id="cashOutput">20.00</span></h1>
-   <div id="container">
+   <div class="container">
       <div id="apple"></div>
       <div id="orange"></div>
       <div id="banana"></div>
@@ -20,6 +20,12 @@
       <div id = "orangePrice"></div>
       <div id = "bananaPrice"></div>
       <div id = "grapePrice"></div>
+      <div >
+         <button class="btn">Buy</button>
+         <button class="btn">Buy</button>
+         <button class="btn">Buy</button>
+         <button class="btn">Buy</button>
+      </div>
     <div>  
   </body>
 </html>
