Got buttons working.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       <div id="orange"></div>
       <div id="banana"></div>
       <div id="grape"></div>
+      <div>
+         <button id="a" class="btn">Buy</button>
+         <button id="o" class="btn">Buy</button>
+         <button id="b" class="btn">Buy</button>
+         <button id="p" class="btn">Buy</button>
+      </div>
     </div>
 
     <div class = "prices">
@@ -20,12 +26,6 @@
       <div id = "orangePrice"></div>
       <div id = "bananaPrice"></div>
       <div id = "grapePrice"></div>
-      <div >
-         <button class="btn">Buy</button>
-         <button class="btn">Buy</button>
-         <button class="btn">Buy</button>
-         <button class="btn">Buy</button>
-      </div>
     <div>  
   </body>
 </html>
