Add inventory counter.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
       <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
-   <h1 id="totalCash">Total: $<span id="cashOutput">20.00</span></h1>
+   <h1 id="totalCash">Cash: $<span id="cashOutput">20.00</span></h1>
+   <h1>Apples: <span id="appleCount">0</span></h1>
+   <h1>Oranges: <span id="orangeCount">0</span></h1>
+   <h1>Bananas: <span id="bananaCount">0</span></h1>
+   <h1>Pears:  <span id="pearCount">0</span></h1>
    <div class="container">
       <div id="apple"></div>
       <div id="orange"></div>
