--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
       <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
-   <h1 id="totalCash">Cash: $<span id="cashOutput">20.00</span></h1>
-   <h1>Apples: <span id="appleCount">0</span></h1>
-   <h1>Oranges: <span id="orangeCount">0</span></h1>
-   <h1>Bananas: <span id="bananaCount">0</span></h1>
-   <h1>Pears:  <span id="pearCount">0</span></h1>
+   <h3 id="totalCash">Cash: $<span id="cashOutput">20.00</span></h1>
+   <div class="ctn">
+     <h3 class="count">Apples: <span id="appleCount">0</span></h1>
+     <h3 class="count">Oranges: <span id="orangeCount">0</span></h1>
+     <h3 class="count">Bananas: <span id="bananaCount">0</span></h1>
+     <h3 class="count">Pears:  <span id="pearCount">0</span></h1>
+   </div>
    <div class="container">
-      <div id="apple"></div>
-      <div id="orange"></div>
-      <div id="banana"></div>
-      <div id="grape"></div>
-      <div>
-         <button id="a" class="btn">Buy</button>
-         <button id="o" class="btn">Buy</button>
-         <button id="b" class="btn">Buy</button>
-         <button id="p" class="btn">Buy</button>
+      <div id="apple">
+        <button id="a" class="btn">Buy</button>
+      </div>
+      <div id="orange">
+        <button id="o" class="btn">Buy</button>
+      </div>
+      <div id="banana">
+        <button id="b" class="btn">Buy</button>
+      </div>
+      <div id="grape">
+        <button id="p" class="btn">Buy</button>
       </div>
     </div>
 
